header container add

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <header>
+    <header class="container">
         <nav>
-            <div class="d-flex">
+            <ul class="d-flex">
                 <li><a id="home" href="#Home">Home</a></li>
                 <li><a id="live" href="#Live Now">Live Now</a></li>
                 <li><a id="play" href="#play Now">Play Now</a></li>
                 <li><a id="about" href="#About">About</a></li>
                 <li><a id="contact" href="Contact">Contact</a></li>
-            </div>
+            </ul>
         </nav>
     </header>
     <main>
