align center added

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <header class="container">
+    <header>
         <nav>
-            <ul class="d-flex">
+            <ul class="d-flex container">
                 <li><a id="home" href="#Home">Home</a></li>
                 <li><a id="live" href="#Live Now">Live Now</a></li>
                 <li><a id="play" href="#play Now">Play Now</a></li>
@@ -21,8 +21,8 @@
     </header>
     <main>
         <!-- banner part -->
-        <section class="container">
-            <div class="d-flex justify-between item-center banner-back-color"id="banner">
+        <section class="banner-back-color">
+            <div class="d-flex justify-between item-center container "id="banner">
                 <div>
                     <h1>Conmebol <br> Copa America <br> 2021</h1>
                     <button>Watch Live</button>
@@ -98,7 +98,7 @@
         </section>
         <!-- footer_Top -->
         <section class="container footet-top">
-            <div class="d-flex justify-evenly" id="footer-Top">
+            <div class="d-flex justify-evenly item-center" id="footer-Top">
                 <div class="w-40">
                     <h1>All Highlights <br> Copa America 2021</h1>
                     <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
