nav width every section have got margin paddin

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <li><a id="live" href="#Live Now">Live Now</a></li>
                 <li><a id="play" href="#play Now">Play Now</a></li>
                 <li><a id="about" href="#About">About</a></li>
-                <li><a id="contact" href="Contact">Contact</a></li>
+                <li><a id="contact" href="#Contact">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -36,7 +36,7 @@
             <div class="d-grid">
                 <div class="card item-center">
                     <img src="./images/players/player-1.png" alt="">
-                    <h1>Mesut Ozil</h1>
+                    <h1>N</h1>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam voluptatum, voluptatibus minus libero dolores eum dolorem explicabo neque praesentium rem nisi quo tempore labore fugit enim porro quibusdam sequi ratione.
                 </div>
                 <div class="card">
@@ -97,8 +97,8 @@
             </div>
         </section>
         <!-- footer_Top -->
-        <section class="container footet-top">
-            <div class="d-flex justify-evenly item-center" id="footer-Top">
+        <section class="container footer-top">
+            <div class="d-flex justify-evenly item-center">
                 <div class="w-40">
                     <h1>All Highlights <br> Copa America 2021</h1>
                     <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
@@ -114,7 +114,6 @@
             <div class="item-center icon">
                 <img src="./images/Social Icons/Dribbble.png" alt="">
                 <img src="./images/Social Icons/Instagram.png" alt="">
-                <img src="./images/Social Icons/login.png" alt="">
                 <img src="./images/Social Icons/Twitter.png" alt="">
                 <img src="./images/Social Icons/Youtube.png" alt="">
                 <h3>Copyright © 2022 Football</h3>
