player name change

--- a/index.html
+++ b/index.html
@@ -36,27 +36,27 @@
             <div class="d-grid">
                 <div class="card item-center">
                     <img src="./images/players/player-1.png" alt="">
-                    <h1>N</h1>
+                    <h1>Neymar Jr</h1>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam voluptatum, voluptatibus minus libero dolores eum dolorem explicabo neque praesentium rem nisi quo tempore labore fugit enim porro quibusdam sequi ratione.
                 </div>
                 <div class="card">
                     <img src="./images/players/player-2.png" alt="">
-                    <h1>Neymar Jr</h1>
+                    <h1>Leonel Messi</h1>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam voluptatum, voluptatibus minus libero dolores eum dolorem explicabo neque praesentium rem nisi quo tempore labore fugit enim porro quibusdam sequi ratione.
                 </div>
                 <div class="card">
                     <img src="./images/players/player-3.png" alt="">
-                    <h1>Leonel Messi</h1>
+                    <h1>Cristiano Ronaldo</h1>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam voluptatum, voluptatibus minus libero dolores eum dolorem explicabo neque praesentium rem nisi quo tempore labore fugit enim porro quibusdam sequi ratione.
                 </div>
                 <div class="card item-center">
                     <img src="./images/players/player-4.png" alt="">
-                    <h1>Mesut Ozil</h1>
+                    <h1>Paulo Dybala</h1>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam voluptatum, voluptatibus minus libero dolores eum dolorem explicabo neque praesentium rem nisi quo tempore labore fugit enim porro quibusdam sequi ratione.
                 </div>
                 <div class="card">
                     <img src="./images/players/player-5.png" alt="">
-                    <h1>Neymar Jr</h1>
+                    <h1>Mesut Ozil</h1>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam voluptatum, voluptatibus minus libero dolores eum dolorem explicabo neque praesentium rem nisi quo tempore labore fugit enim porro quibusdam sequi ratione.
                 </div>
                 <div class="card">
@@ -66,12 +66,12 @@
                 </div>
                 <div class="card item-center">
                     <img src="./images/players/player-7.png" alt="">
-                    <h1>Mesut Ozil</h1>
+                    <h1>Di Maria</h1>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam voluptatum, voluptatibus minus libero dolores eum dolorem explicabo neque praesentium rem nisi quo tempore labore fugit enim porro quibusdam sequi ratione.
                 </div>
                 <div class="card">
                     <img src="./images/players/player-8.png" alt="">
-                    <h1>Neymar Jr</h1>
+                    <h1>Kylian Mbappé</h1>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam voluptatum, voluptatibus minus libero dolores eum dolorem explicabo neque praesentium rem nisi quo tempore labore fugit enim porro quibusdam sequi ratione.
                 </div>
                 <div class="card">
@@ -81,12 +81,12 @@
                 </div>
                 <div class="card item-center">
                     <img src="./images/players/player-10.png" alt="">
-                    <h1>Mesut Ozil</h1>
+                    <h1>Harry Kane</h1>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam voluptatum, voluptatibus minus libero dolores eum dolorem explicabo neque praesentium rem nisi quo tempore labore fugit enim porro quibusdam sequi ratione.
                 </div>
                 <div class="card">
                     <img src="./images/players/player-11.png" alt="">
-                    <h1>Neymar Jr</h1>
+                    <h1>Kevin De Bruyne</h1>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam voluptatum, voluptatibus minus libero dolores eum dolorem explicabo neque praesentium rem nisi quo tempore labore fugit enim porro quibusdam sequi ratione.
                 </div>
                 <div class="card">
